# stdcost

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 46a61c9ae54a_widen_variance_percent_precision.py  a1b2c3d4e5f6_phase2_bom_budget.py  b2c3d4e5f6g7_allocation_rule_cost_element.py  bf93fb832bbb_initial_schema_v2.py  c3d4e5f6g7h8_crude_product_multistage.py  d4e5f6g7h8i9_decisan_sc_39ki_stdcost.py  e5f6g7h8i9j0_v53_product_stdcost.py  f6g7h8i9j0k1_inventory_valuation.py  g7h8i9j0k1l2_sc_consolidation_and_material_std_cost.py  h8i9j0k1l2m3_wip_standard_costs.py  i9j0k1l2m3n4_processes_and_routes.py
backend/app/: config.py  main.py  seed.py  seed_phase3.py
backend/app/db/: session.py
backend/app/models/: __init__.py  audit.py  cost.py  master.py  variance.py
backend/app/schemas/: actual_cost.py  ai_explanation.py  common.py  cost.py  import_batch.py  inventory.py  inventory_valuation.py  master.py  reconciliation.py  variance.py
backend/app/services/: ai_agent.py  allocation.py  cost_calculation.py  crude_inventory_import.py  crude_process_route_import.py  data_import.py  inventory_import.py  inventory_movement_import.py  inventory_valuation.py  raw_material_inventory_import.py  reconciliation.py  variance_analysis.py  wip_sc_import.py
backend/app/utils/: jp_locale.py
backend/scripts/: README.md  convert_xlsb_sheet.py  import_wip_sc.py  supplement_crude_sc.py  supplement_inventory_masters.py
backend/tests/: conftest.py  test_health.py  test_products.py
(+72 files in other folders)
